--- a/1_Filtering and processing location data.qmd
+++ b/1_Filtering and processing location data.qmd
@@ -29,7 +29,7 @@ The following chunk of code will check for the necessary packages (listed in `pa
 ```{r, output=FALSE}
 # Package names
 packages <- c("tidyverse","mapview","ggspatial","trip","crsuggest","units",
-              "plotly","sf","janitor","lubridate","crsuggest","doFuture","picMaps","rosm")
+              "plotly","sf","janitor","lubridate","crsuggest","doFuture","picMaps","rosm", "terra")
 
 # R package repositories
 repos <- c(
